toy-c-compiler-master/src/test/resources/errors/call_before_definition.tc
int main() {
    return f();
}

int f() {
    return 1;
}
